--- a/fastlane/package.json
+++ b/fastlane/package.json
@@ -2,11 +2,24 @@
   "name": "@lightdotso/fastlane",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "scripts": {
     "build": "echo 'Empty build script for turborepo trigger'"
   },
   "dependencies": {
     "@lightdotso/android": "workspace:*",
     "@lightdotso/ios": "workspace:*"
+  },
+  "publishConfig": {
+    "access": "restricted"
   }
 }
