--- a/android/package.json
+++ b/android/package.json
@@ -17,5 +17,8 @@
   },
   "dependencies": {
     "@lightdotso/crates": "workspace:*"
+  },
+  "publishConfig": {
+    "access": "restricted"
   }
 }
