--- a/configurations/eslint/package.json
+++ b/configurations/eslint/package.json
@@ -1,7 +1,17 @@
 {
   "name": "@lightdotso/eslint-config",
   "version": "2.0.0",
-  "license": "MIT",
+  "private": true,
+  "homepage": "https://github.com/LightDotSo/LightDotSo",
+  "bugs": {
+    "url": "https://github.com/LightDotSo/LightDotSo/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LightDotSo/LightDotSo.git"
+  },
+  "license": "GPL-3.0",
+  "author": "Light, Inc.",
   "main": "index.js",
   "dependencies": {
     "eslint-config-next": "^13.4.7",
@@ -10,6 +20,6 @@
     "eslint-plugin-react": "7.28.0"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "restricted"
   }
 }
