--- a/configurations/tailwindcss/package.json
+++ b/configurations/tailwindcss/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lightdotso/tailwindcss",
   "version": "1.0.1",
-  "private": false,
+  "private": true,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
   "bugs": {
     "url": "https://github.com/LightDotSo/LightDotSo/issues"
@@ -28,6 +28,6 @@
     "tailwindcss": "^3.3.2"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "restricted"
   }
 }
