--- a/packages/popup/package.json
+++ b/packages/popup/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lightdotso/popup",
   "version": "0.0.1",
-  "private": false,
+  "private": true,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
   "bugs": {
     "url": "https://github.com/LightDotSo/LightDotSo/issues"
@@ -43,6 +43,6 @@
     "typescript": "5.0.2"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "restricted"
   }
 }
