--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,13 @@ default-members = ["bin"]
 opt-level = 0
 codegen-units = 16
 
+# https://stackoverflow.com/a/54842093
 [profile.release]
+opt-level = 'z'
 lto = true
-opt-level = 2
-codegen-units = 16
+codegen-units = 1
+panic = 'abort'
+strip = true
 
 [workspace.dependencies]
 anyhow = "1.0.71"
