chore: ini k8s sha

--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -47,7 +47,7 @@ jobs:
           location: ${{ secrets.GKE_CLUSTER_REGION }}
       - name: Set Image
         run: |
-          kubectl set image deployment/serve serve=ghcr.io/lightdotso/lightdotso:main
+          kubectl set image deployment/serve serve=ghcr.io/lightdotso/lightdotso:${{ github.sha }}
       - name: Rollout Status
         run: |
           kubectl rollout status deployment/serve
