--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,15 +20,11 @@ codegen-units = 16
 
 # https://stackoverflow.com/a/54842093
 [profile.release]
-# opt-level = 'z'
-# lto = true
-# codegen-units = 1
-# panic = 'abort'
-# strip = true
-
+opt-level = 'z'
 lto = true
-opt-level = 2
-codegen-units = 16
+codegen-units = 1
+panic = 'abort'
+strip = true
 
 [workspace.dependencies]
 anyhow = "1.0.71"
