--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -8,6 +8,8 @@ targets = [
     "aarch64-apple-ios",
     "x86_64-apple-ios",
     "aarch64-apple-ios-sim",
+    "aarch64-apple-darwin",
+    "x86_64-apple-darwin"
 ]
 profile = "default"
 components = ["clippy", "rustfmt", "rust-src"]
