--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   changesets-status:
-    if: github.event_name == 'pull_request' || github.event_name == 'merge_group'
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
