--- a/.github/workflows/comment.yml
+++ b/.github/workflows/comment.yml
@@ -7,7 +7,7 @@ permissions:
   contents: write
   pull-requests: write
 jobs:
-  approve:
+  comment-approve:
     runs-on: ubuntu-latest
     if: github.event.issue.pull_request && contains(github.event.comment.body, '/approve')
     timeout-minutes: 3
