--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           publish: pnpm run release
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   changesets-check:
     if: always()
