--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -65,8 +65,10 @@ jobs:
       - name: Publish to NPM
         uses: changesets/action@v1
         continue-on-error: true
+        with:
+          publish: pnpm run release
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
   changesets-check:
     if: always()
