--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@lightdotso/extension",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "homepage": "https://github.com/LightDotSo/LightDotSo",
   "bugs": {
     "url": "https://github.com/LightDotSo/LightDotSo/issues"
@@ -35,6 +35,6 @@
     "web-ext": "^7.6.2"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   }
 }
