--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -24,7 +24,7 @@ jobs:
     if: needs.ios-turbo.outputs.trigger == 'true'
     needs:
       - ios-turbo
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     timeout-minutes: 90
     steps:
       - name: Fetch Head
@@ -67,11 +67,6 @@ jobs:
         uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: "14.1"
-      - name: Xcresultparser Install
-        uses: jaxxstorm/action-install-gh-release@v1.10.0
-        with:
-          repo: a7ex/xcresultparser
-          extension: "xcresultparser.zip"
       - name: Node Build
         run: |
           pnpm turbo run build
