--- a/.github/workflows/changesets.yml
+++ b/.github/workflows/changesets.yml
@@ -52,6 +52,7 @@ jobs:
     env:
       TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+    permissions: write-all
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
