--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -101,10 +101,10 @@ jobs:
         run: |
           xcresultparser \
             --output-format cobertura \
-            LightWalletTests.xcresult > LightWalletTests.xml
+            fastlane/test_output/LightWalletTests.xcresult > LightWalletTests.xml
           xcresultparser \
             --output-format cobertura \
-            LightWalletUITests.xcresult > LightWalletUITests.xml
+            fastlane/test_output/LightWalletUITests.xcresult > LightWalletUITests.xml
       - name: Codecov
         uses: codecov/codecov-action@v3
         with:
