--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "lightwallet-core"
-version = "0.1.0"
-edition = "2021"
 
-license = "GPL-3.0"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 [lib]
 name = "uniffi_lightwallet_core"
