--- a/tools/embedded-scopelint/Cargo.toml
+++ b/tools/embedded-scopelint/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "embedded-scopelint"
-version = "0.1.0"
-authors = ["Shun Kakinoki"]
-edition = "2021"
 
-license = "GPL-3.0"
+version.workspace = true
+edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 
 publish = false
 
