--- a/.kodiak.toml
+++ b/.kodiak.toml
@@ -4,4 +4,6 @@ version = 1
 [update]
 always = true # default: false
 require_automerge_label = false # default: true
+
+[merge.automerge_dependencies]
 usernames = ["LightDotSoBot"]
