--- a/contracts/circuits/Nargo.toml
+++ b/contracts/circuits/Nargo.toml
@@ -3,4 +3,4 @@ authors = [""]
 compiler_version = "0.6.0"
 
 [dependencies]
-ecrecover = {git = "https://github.com/colinnielsen/ecrecover-noir.git"}
+ecrecover = { tag = "v0.5.0", git = "https://github.com/colinnielsen/ecrecover-noir.git" }
