--- a/foundry.toml
+++ b/foundry.toml
@@ -25,6 +25,6 @@
   no_match_test = "testForkRun"
 
 [profile.ci]
-  fuzz = { runs = 5000 }
-  invariant = { runs = 1000 }
-  via_ir = true
+  # fuzz = { runs = 5000 }
+  # invariant = { runs = 1000 }
+  # via_ir = true
