--- a/foundry.toml
+++ b/foundry.toml
@@ -24,7 +24,9 @@
 [profile.local]
   no_match_test = "testForkRun"
 
+[profile.noir]
+  test = "contracts/circuits/test"
+
 [profile.ci]
-  # fuzz = { runs = 5000 }
-  # invariant = { runs = 1000 }
-  # via_ir = true
+  fuzz = { runs = 5000 }
+  invariant = { runs = 1000 }
