chore: ini noir contracts (#125)
* chore: ini noir contracts

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: pudate

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

* chore: update

--- a/foundry.toml
+++ b/foundry.toml
@@ -19,9 +19,13 @@
   test = "contracts/test"
   verbosity = 3
   via_ir = false
+  fs_permissions = [{ access = "read", path = "contracts/circuits/proofs"}]
 
 [profile.local]
   no_match_test = "testForkRun"
+
+[profile.noir]
+  test = "contracts/circuits/test"
 
 [profile.ci]
   fuzz = { runs = 5000 }
