chore: ini nites

--- a/foundry.toml
+++ b/foundry.toml
@@ -19,13 +19,15 @@
   test = "contracts/test"
   verbosity = 3
   via_ir = false
-  fs_permissions = [{ access = "read", path = "contracts/circuits/proofs"}]
 
 [profile.local]
   no_match_test = "testForkRun"
 
 [profile.noir]
   test = "contracts/circuits/test"
+  fs_permissions = [
+    { access = "read", path = "contracts/circuits/proofs"}
+  ]
 
 [profile.ci]
   fuzz = { runs = 5000 }
