--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
+    "@wagmi/cli": "^1.3.0",
     "autoprefixer": "^10.4.14",
     "chai": "^4.3.7",
     "commitlint": "^17.6.6",
