--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "solhint:fix": "solhint 'contracts/**/*.sol' --fix",
     "solhint:lint": "solhint 'contracts/**/*.sol'",
     "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages}/**/package.json'",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "wagmi:generate": "wagmi generate"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
