--- a/packages/wagmi/tsconfig.json
+++ b/packages/wagmi/tsconfig.json
@@ -3,7 +3,5 @@
     "module": "commonjs",
     "target": "ES2021"
   },
-  "include": [
-    "src/generated.ts"
-  ]
+  "include": ["src/generated.ts"]
 }
