--- a/packages/wagmi/turbo.json
+++ b/packages/wagmi/turbo.json
@@ -3,9 +3,7 @@
   "extends": ["//"],
   "pipeline": {
     "wagmi": {
-      "outputs": [
-        "src/generated.ts"
-      ]
+      "outputs": ["src/generated.ts"]
     },
     "dev": {
       "cache": false,
