--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -131,8 +131,9 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: lcov.info
           fail_ci_if_error: false
+          files: lcov.info
+          flags: contracts
   contracts-hardhat:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
