--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -99,8 +99,9 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: lcov.info
           fail_ci_if_error: false
+          files: lcov.info
+          flags: rust
       - name: Run Clippy
         run: |
           cargo clippy \
