--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,7 +10,7 @@ repository.workspace = true
 
 [lib]
 name = "uniffi_lightwallet_core"
-crate-type = ["staticlib", "cdylib"]
+crate-type = ["staticlib"]
 
 [dependencies]
 uniffi = "0.23.0"
