--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "solhint:fix": "solhint 'contracts/**/*.sol' --fix",
     "solhint:lint": "solhint 'contracts/**/*.sol'",
     "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages}/**/package.json'",
-    "test": "echo \"Error: no test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "wagmi:generate": "wagmi generate"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
@@ -50,6 +51,7 @@
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
+    "@wagmi/cli": "^1.3.0",
     "autoprefixer": "^10.4.14",
     "chai": "^4.3.7",
     "commitlint": "^17.6.6",
