--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -134,29 +134,6 @@ jobs:
           fail_ci_if_error: false
           files: lcov.info
           flags: contracts
-  contracts-hardhat:
-    if: needs.contracts-turbo.outputs.trigger == 'true'
-    needs:
-      - contracts-turbo
-    runs-on: ubuntu-latest
-    timeout-minutes: 90
-    env:
-      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
-      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-    steps:
-      - name: Fetch Head
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
-      - name: Node Install
-        uses: wallet-rs/wallet-rs/.github/actions/node-install@main
-      - name: Hardhat Test
-        run: |
-          pnpm turbo run test-hh
   contracts-nargo:
     if: needs.contracts-turbo.outputs.trigger == 'true'
     needs:
@@ -220,7 +197,6 @@ jobs:
       - contracts-lint
       - contracts-storage
       - contracts-test
-      - contracts-hardhat
       - contracts-nargo
       - contracts-slither
     runs-on: ubuntu-latest
@@ -229,5 +205,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-hardhat,contracts-nargo,contracts-slither
+          allowed-skips: contracts-build,contracts-lint,contracts-storage,contracts-test,contracts-nargo,contracts-slither
           jobs: ${{ toJSON(needs) }}
