--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -44,6 +44,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
       - name: Node Test
         run: |
           pnpm turbo run test
