--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "fix": "concurrently 'pnpm:*:fix'",
     "forge:fmt:cmd": "forge fmt",
     "forge:snapshot:cmd": "forge snapshot && echo",
+    "hardhat:compile": "hardhat compile",
+    "hardhat:compile:coverage": "hardhat compile-for-coverage",
+    "hardhat:node": "hardhat node",
     "lint": "concurrently 'pnpm:*:lint'",
     "npm-package-json:lint": "npmPkgJsonLint ./apps ./android ./configuations ./contracts ./crates ./ios ./packages",
     "pnpm:upgrade": "pnpm upgrade --recursive",
@@ -30,9 +33,10 @@
     "solhint:fix": "solhint 'contracts/**/*.sol' --fix",
     "solhint:lint": "solhint 'contracts/**/*.sol'",
     "sort-package-json:fix": "sort-package-json '{apps,configurations,contracts,crates,fastlane,ios,packages}/**/package.json'",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "vitest",
     "wagmi:generate": "wagmi generate"
   },
+  "dependencies": {},
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
@@ -42,6 +46,7 @@
     "@lightdotso/tsconfig": "workspace:*",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-foundry": "^1.0.2",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@release-it/keep-a-changelog": "^3.1.0",
@@ -86,9 +91,13 @@
     "solhint": "^3.4.1",
     "sort-package-json": "^1.57.0",
     "tailwindcss": "^3.3.2",
+    "ts-node": "^10.9.1",
     "turbo": "^1.10.7",
     "typescript": "^5.1.6",
-    "vercel": "^28.20.0"
+    "vercel": "^28.20.0",
+    "viem": "^1.2.10",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.33.0"
   },
   "packageManager": "pnpm@8.6.6"
 }
