--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "test": "vitest",
     "wagmi:generate": "wagmi generate"
   },
-  "dependencies": {},
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.2",
@@ -97,7 +96,8 @@
     "vercel": "^28.20.0",
     "viem": "^1.2.10",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.33.0"
+    "vitest": "^0.33.0",
+    "vitest-solidity-coverage": "^0.1.3"
   },
   "packageManager": "pnpm@8.6.6"
 }
