--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -42,6 +42,8 @@ jobs:
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Node Install
         uses: wallet-rs/wallet-rs/.github/actions/node-install@main
       - name: Install Foundry
