--- a/turbo.json
+++ b/turbo.json
@@ -22,6 +22,10 @@
       "outputs": ["artifacts/**"],
       "inputs": ["contracts/src/**"]
     },
+    "//#hardhat:compile:coverage": {
+      "outputs": ["artifacts/**", "coverage-data.json"],
+      "inputs": ["contracts/src/**"]
+    },
     "//#lint": {
       "dependsOn": [],
       "outputs": [],
@@ -34,8 +38,11 @@
         "packages/**"
       ]
     },
-    "//#test:coverage": {
+    "//#test": {
       "dependsOn": ["hardhat:compile"]
+    },
+    "//#test:coverage": {
+      "dependsOn": ["hardhat:compile:coverage"]
     }
   }
 }
